# gaussian-mixture-divergence

./: .gitignore  README.md  pyproject.toml  requirements.txt  solver.ipynb  solver.py
src/: constraints.py  math_utils.py  validate_MC.py
src/hsdgm/: constraints.py  estimators.py  instances.py  validate_MC.py
src/hsdgm.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/hsdgm/pgd/: true.py
src/pgd/: pairwise.py  sanity_check.py  true.py
