[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hsdgm"
version = "0.0.1"
requires-python = ">=3.9"
description = "Hockey-stick divergence bounds for Gaussian mixtures"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
